Schematic Brush Reborn 1.1-BETA (#4)
Make plugin compatible with Java 8